--- a/src/assets/style/cssGoiYSearch.css
+++ b/src/assets/style/cssGoiYSearch.css
@@ -1,6 +1,7 @@
-/* 
+
 .ant-dropdown {
     max-height: 300px;
+    max-width: 400px;
     overflow-y: auto;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -44,4 +45,17 @@
     z-index: 1050;
   }
   
-   */
+  .ant-dropdown::-webkit-scrollbar {
+    width: 8px; /* Tùy chỉnh thanh cuộn */
+}
+
+.ant-dropdown::-webkit-scrollbar-thumb {
+    background-color: #d4d4d4;
+    border-radius: 4px;
+}
+
+.ant-dropdown::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+
